crates/libvue_compiler_sfc/src/tests/snapshots/libvue_compiler_sfc__tests__snapshot_tests__minimal_template_only.snap
---
source: src/tests/snapshot_tests.rs
expression: snapshot
---
ParseOutputSnapshot {
    has_errors: false,
    error_count: 0,
    errors: [],
    descriptor: Some(
        DescriptorSnapshot {
            filename: "Minimal.vue",
            source_length: 48,
            css_vars: [],
            slotted: false,
            custom_blocks_count: 0,
            template: Some(
                TemplateBlockSnapshot {
                    content: "\n  <div>Hello World</div>\n",
                    lang: "",
                    src: None,
                    loc: SourceLocationSnapshot {
                        start: PositionSnapshot {
                            offset: 10,
                            line: 1,
                            column: 11,
                        },
                        end: PositionSnapshot {
                            offset: 36,
                            line: 3,
                            column: 1,
                        },
                    },
                    attrs: {},
                },
            ),
            script: None,
            script_setup: None,
            styles: [],
            custom_blocks: [],
        },
    ),
}
